<?xml version="1.0"?>
<package format="3">
  <name>hill_climbing_robot_cpp</name>
  <version>0.0.1</version>
  <description>Hill Climbing Robot simulation using ROS2 and Gazebo in C++</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
